* Less cryptic error when guessing format from extension in ``new_post``
  fails
* Use Jupyter name more consistently in docs
* Support CODE_COLOR_SCHEME in Jupyter notebooks (Issue #2093)
* Language was not passed to title and link generation for page indexes
* Addressed issue with snaps not allowing certain functions to work properly.

Removed features
----------------

* Removed the slides directive for docutils, it will now be a separate plugin.
* Dropped Python 2 and Python 3.3 support (oldest supported version is 3.4)
* Removed ``nikola install_theme`` — use ``nikola theme`` instead
* Droppped insecure post “encryption” feature
* Stopped supporting all deprecated config options
* Dropped annotations support (annotateit.org closed down in March 2017)
* Removed taxonomy option ``also_create_classifications_from_other_languages``
  (Issue #2785)
* Removed old 7-line metadata format (Issue #2839)

New in v7.8.8
=============

This release fixes two grave bugs in TOML metadata support (sorry!).
The built-in themes have also been cleaned up and include less unused
assets. In addition, taxonomies now support translations. HTML meta
tags are also possible metadata sources. The default metadata format
to generate can now be changed.

Features
--------

* Providing infrastructure for taxonomies for classification pages to
  link to related classifications in other languages
* Added alternate links (visible and header) for archives and authors
  (Issue #993)
* Added options to add alternative links (visible and header) for
  tags, sections and categories.
* New METADATA_FORMAT option to choose preferred metadata format
  (Nikola/YAML/TOML/Pelican) (Part of Issue #2801)
* Extract metadata from HTML meta and title tags like Pelican (Issue #1923)
* Update assets in the ``base`` and ``base-jinja`` themes and clean
  up code (Issue #2744)
* Show captions in the base theme gallery (Part of issue #2777)

Bugfixes
--------

* Fix two grave bugs in TOML metadata