@@ -4,7 +4,6 @@
 {% import 'comments_helper_livefyre.tmpl' as livefyre with context %}
 {% import 'comments_helper_intensedebate.tmpl' as intensedebate with context %}
 {% import 'comments_helper_muut.tmpl' as muut with context %}
-{% import 'comments_helper_googleplus.tmpl' as googleplus with context %}
 {% import 'comments_helper_facebook.tmpl' as facebook with context %}
 {% import 'comments_helper_isso.tmpl' as isso with context %}
 
@@ -17,8 +16,6 @@
         {{ intensedebate.comment_form(url, title, identifier) }}
     {% elif comment_system == 'muut' %}
         {{ muut.comment_form(url, title, identifier) }}
-    {% elif comment_system == 'googleplus' %}
-        {{ googleplus.comment_form(url, title, identifier) }}
     {% elif comment_system == 'facebook' %}
         {{ facebook.comment_form(url, title, identifier) }}
     {% elif comment_system == 'isso' %}
@@ -35,8 +32,6 @@
         {{ intensedebate.comment_link(link, identifier) }}
     {% elif comment_system == 'muut' %}
         {{ muut.comment_link(link, identifier) }}
-    {% elif comment_system == 'googleplus' %}
-        {{ googleplus.comment_link(link, identifier) }}
     {% elif comment_system == 'facebook' %}
         {{ facebook.comment_link(link, identifier) }}
     {% elif comment_system == 'isso' %}
@@ -53,8 +48,6 @@
         {{ intensedebate.comment_link_script() }}
     {% elif comment_system == 'muut' %}
         {{ muut.comment_link_script() }}
-    {% elif comment_system == 'googleplus' %}
-        {{ googleplus.comment_link_script() }}
     {% elif comment_system == 'facebook' %}
         {{ facebook.comment_link_script() }}
     {% elif comment_system == 'isso' %}
