@@ -4,7 +4,6 @@
 <%namespace name="livefyre" file="comments_helper_livefyre.tmpl"/>
 <%namespace name="intensedebate" file="comments_helper_intensedebate.tmpl"/>
 <%namespace name="muut" file="comments_helper_muut.tmpl"/>
-<%namespace name="googleplus" file="comments_helper_googleplus.tmpl"/>
 <%namespace name="facebook" file="comments_helper_facebook.tmpl"/>
 <%namespace name="isso" file="comments_helper_isso.tmpl"/>
 
@@ -17,8 +16,6 @@
         ${intensedebate.comment_form(url, title, identifier)}
     % elif comment_system == 'muut':
         ${muut.comment_form(url, title, identifier)}
-    % elif comment_system == 'googleplus':
-        ${googleplus.comment_form(url, title, identifier)}
     % elif comment_system == 'facebook':
         ${facebook.comment_form(url, title, identifier)}
     % elif comment_system == 'isso':
@@ -35,8 +32,6 @@
         ${intensedebate.comment_link(link, identifier)}
     % elif comment_system == 'muut':
         ${muut.comment_link(link, identifier)}
-    % elif comment_system == 'googleplus':
-        ${googleplus.comment_link(link, identifier)}
     % elif comment_system == 'facebook':
         ${facebook.comment_link(link, identifier)}
     % elif comment_system == 'isso':
@@ -53,8 +48,6 @@
         ${intensedebate.comment_link_script()}
     % elif comment_system == 'muut':
         ${muut.comment_link_script()}
-    % elif comment_system == 'googleplus':
-        ${googleplus.comment_link_script()}
     % elif comment_system == 'facebook':
         ${facebook.comment_link_script()}
     % elif comment_system == 'isso':
